add index.html css link

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>git-test-dev</title>
+	<title>git-test</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 <div class="container">
